# osv-db

./: .gitignore  Cargo.toml  LICENSE  README.md  deny.toml  scell.cue  scell.yml
.github/workflows/: ci.yml  release.yml
src/: downloader.rs  errors.rs  lib.rs  osv_gs.rs  state.rs
src/types/: affected.rs  credit.rs  ecosystem.rs  mod.rs  modified_record.rs  package.rs  range.rs  reference.rs  severity.rs
src/types/tests/: mod.rs
tests/: concurrency.rs  simple_roundtrip.rs
